--- a/wa-antispam-bot/package.json
+++ b/wa-antispam-bot/package.json
@@ -8,5 +8,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "moment": "^2.30.1",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.27.0"
+  },
+  "devDependencies": {},
   "description": ""
 }
